# Clyde

./: Makefile  Project.toml  README.md  millet.toml
.github/: copilot-instructions.md
docs/: RESTRUCTURING.md  USAGE.md
langs/python/: README.md  demo.py  pyproject.toml
langs/python/clide/: __init__.py  help.py  parser.py  runtime.py  spec.py
langs/python/tests/: clide_tests.py
langs/rust/: Cargo.toml  README.md
langs/rust/src/: help.rs  lib.rs  main.rs  parser.rs  runtime.rs  spec.rs
langs/rust/tests/: clide_tests.rs
langs/sml/: Makefile  README.md  millet.toml
langs/sml/lib/clide/: CHANGELOG.md  LICENSE  README.md  clide.mlb  smlpkg.toml
langs/sml/lib/clide/src/: CliRuntime.sml  CliSpec.sml  CliSpecParser.sml  Clide.sml
langs/sml/mlb/: clide-prod.mlb  clide-test.mlb
langs/sml/src/: Main.sml
langs/sml/test/: ClideTests.sml  Expect.sml  TestMain.sml
langs/sml/tools/: toml2mk.py
langs/zig/: README.md  build.zig
langs/zig/src/: clide.zig  help.zig  main.zig  parser.zig  runtime.zig  spec.zig
langs/zig/tests/: clide_tests.zig
lib/clide/: README.md  RELEASE.md
lib/clide/docs/: USAGE.md
lib/clide/src/: CliHelp.sml
mlb/: clide-base.mlb  clide-demo-prod.mlb
src/: Main.sml
tools/: toml2mk.py
